--- a/index.html
+++ b/index.html
@@ -97,6 +97,19 @@
             </div>
           </div>
           <!-- end of column and card 3 -->
+           <!-- column 4 -->
+           <div class="cardContainer col-lg-3 col-md-3 col-sm-6">
+            <!-- Card 4 -->
+            <div class="card">
+              <img src="images/3_card.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+          <!-- end of column and card 4 -->
             
        
         <!--second row-->
@@ -141,7 +154,19 @@
               </div>
             </div>
           </div>
-          <!-- end of column and card 3 -->
+          <!-- column 4 -->
+          <div class="cardContainer col-lg-3 col-md-3 col-sm-6">
+            <!-- Card 4 -->
+            <div class="card">
+              <img src="images/3_card.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+          <!-- end of column and card 4 -->
 
           <!-- contact content -->
     <div class="container-fluid">
