--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
           <div class="cardContainer col-lg-3 col-md-3 col-sm-6">
             <!--first card-->
             <div class="card">
-              <img src="images/1_card.png" class="card-img-top" alt="...">
+              <img src="Images/me..jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h5 class="card-title">About me</h5>
+                <p class="card-text">Skills: HTML, CSS, JavaScript, Bootstrap, GitHub</p>
                 <a href="#" class="btn btn-primary">Go somewhere</a>
               </div>
             </div>
@@ -74,12 +74,15 @@
           <div class="cardContainer col-lg-3 col-md-3 col-sm-6">
             <!-- card 2 -->
             <div class="card">
-              <img src="images/2_card.png" class="card-img-top" alt="...">
+              <img src="Images/beach.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
+                <h5 class="card-title">Landing Page</h5>
+                <p class="card-text">A project to create a landing page.</p>
+                <a href="https://github.com/Vickysug/golden-island" target="_blank" class="btn btn-primary">View GitHub Repository</a>
+                <Br></Br>
+                <a href="https://vickysug.github.io/golden-island/" target="_blank" class="btn btn-primary">View deployed page</a>
+            </div>
+
             </div>
           </div>
           <!-- end of column and card 2 -->
@@ -88,12 +91,13 @@
           <div class="cardContainer col-lg-3 col-md-3 col-sm-6">
             <!-- Card 3 -->
             <div class="card">
-              <img src="images/3_card.png" class="card-img-top" alt="...">
+              <img src="Images/horiseon.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
+                <h5 class="card-title">Accessibility</h5>
+                <p class="card-text">An on-the-job ticket to make codebase accessible.</p>
+                <a href="https://github.com/Vickysug/horiseon" target="_blank" class="btn btn-primary">View GitHub Repository</a>
+              <br></br>
+              <a href="https://vickysug.github.io/horiseon/" target="_blank" class="btn btn-primary">View deployed page</a>
             </div>
           </div>
           <!-- end of column and card 3 -->
@@ -101,7 +105,7 @@
            <div class="cardContainer col-lg-3 col-md-3 col-sm-6">
             <!-- Card 4 -->
             <div class="card">
-              <img src="images/3_card.png" class="card-img-top" alt="...">
+              <img src="https://placehold.co/600x400" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
