--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <div class="cardContainer col-lg-3 col-md-3 col-sm-12">
       <div class="card">
-        <img src="images/2_card.png" class="card-img-top" alt="...">
+        <img src="Images/horiseon.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
