--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
 
-  <title>Victoria Sugden Portfolio</title>
+  <title>Victoria Sugden Portfolio change test</title>
 </head>
 
 <body>
