--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
         <!--made text column larger-->
         <div class="col-xs-6 col-md-9 col-lg-9">
-          <h4 class="display-5 fw-bold">Victoria Sugden Portfolio</h4>
+          <h4 class="display-5 fw-bold">Victoria Sugden Portfolio TEST</h4>
           <!--created a class to change large font size-->
           <div class="font1">
             <p class="fs-4">Aspiring front-end developer with front-end developer
