final save after changing CSS path

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <link rel="stylesheet" href="CSS/style.css">
 
-  <title>Victoria Sugden Portfolio change test</title>
+  <title>Victoria Sugden Portfolio</title>
 </head>
 
 <body>
@@ -70,7 +70,7 @@
         </div>
         <!--made text column larger-->
         <div class="col-xs-6 col-md-9 col-lg-9">
-          <h4 class="display-5 fw-bold">Victoria Sugden Portfolio TEST</h4>
+          <h4 class="display-5 fw-bold">Victoria Sugden Portfolio</h4>
           <!--created a class to change large font size-->
           <div class="font1">
             <p class="fs-4">Aspiring front-end developer with front-end developer
