--- a/index.html
+++ b/index.html
@@ -172,14 +172,14 @@
         <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
           <!--card2-->
           <div class="card">
-            <img src="https://placehold.co/600x400" class="card-img-top" alt="...">
+            <img src="Images/Elenaor clutch's2.resize.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-              <a href="#" class="btn btn-primary">Go to GitHub repository</a>
+              <h5 class="card-title">Business page</h5>
+              <p class="card-text">User story: To create a single web page with links to social media and etsy. 
+              </p>
+              <a href="https://github.com/Vickysug/leather-bags" class="btn btn-primary">Go to GitHub repository</a>
               <br></br>
-              <a href="#" class="btn btn-primary">Go to deployed page</a>
+              <a href="https://vickysug.github.io/leather-bags/" class="btn btn-primary">Go to deployed page</a>
             </div>
           </div>
         </div>
