changed to responsiveness

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
   <!-- Jumbotron Code -->
   <div class="p-5 mb-4 bg-body-tertiary rounded-3">
-    <div class="container-fluid py-5">
+    <div class="container py-5">
       <!--created rows and columns to move picture to side-->
       <div class="row">
         <!--made image column smaller-->
@@ -73,7 +73,7 @@
           <h4 class="display-5 fw-bold">Victoria Sugden Portfolio</h4>
           <!--created a class to change large font size-->
           <div class="font1">
-            <p class="fs-4">Aspiring front-end developer with front-end developer
+            <p class="fs-3">Aspiring front-end developer with front-end developer
               bootcamp training, see <a href="#about-me">About me</a> for further details.
               Browse my projects, including GitHub repositories. You may also view the
               repository for this page
@@ -215,11 +215,11 @@
         <div class="row valueProp">
           <!-- <div class="sideAccent">
           </div> -->
-          <div class="imageContainer col-3">
+          <div class="imageContainer col-md-3 col">
             <!--made a class for image to make it small-->
             <img src="Images/me..JPG" class="img-sm" alt="Picure of Victoria.">
           </div>
-          <div class="text col-8">
+          <div class="text col-md-8 col">
 
             <h5>Skills</h5>
             ● UX Design &nbsp;● Git & GitHub &nbsp;● CSS &nbsp;● HTML &nbsp;
@@ -245,9 +245,9 @@
         <div class="row valueProp">
           <!-- <div class="sideAccent">
           </div> -->
-          <div class="imageContainer col-3"></div>
+          <div class="imageContainer col-md-3 col"></div>
 
-          <div class="text col-8">
+          <div class="text col-md-8 col">
             <div class="contact" id="contact"></div>
             <h5>Contact</h5>
             <p>
