added spotted app project

--- a/index.html
+++ b/index.html
@@ -95,21 +95,18 @@
         <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
           <!--card1-->
           <div class="card">
-            <div id="landing-page">
-            <img src="Images/beach.png" class="card-img-special" alt="...">
+            <img src="Images/spotted.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Landing Page</h5>
-              <p class="card-text">User story: Create a landing page for a luxury holiday business that collects
-                visitor's contact information.</p>
-              <a href="https://github.com/Vickysug/golden-island" target="_blank" class="btn btn-primary">Go to GitHub
-                repository</a>
+              <h5 class="card-title">App using API's</h5>
+              <p class="card-text"> A social media application tailored for local communities.</p>
+              <a href="https://github.com/Vickysug/spotted-app" class="btn btn-primary">Go to GitHub repository</a>
               <br></br>
-              <a href="https://vickysug.github.io/golden-island/" target="_blank" class="btn btn-primary">Go to deployed
-                page</a>
+              <a href="https://vickysug.github.io/spotted-app/" class="btn btn-primary">Go to deployed page</a>
             </div>
           </div>
         </div>
-      </div>
+
+
         <!--column2-->
         <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
           <!--card2-->
@@ -186,18 +183,23 @@
         <!--column3-->
         <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
           <!--card3-->
+          
           <div class="card">
-            <img src="https://placehold.co/600x400" class="card-img-top" alt="...">
+            <div id="landing-page">
+            <img src="Images/beach.png" class="card-img-special" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-              <a href="#" class="btn btn-primary">Go to GitHub repository</a>
+              <h5 class="card-title">Landing Page</h5>
+              <p class="card-text">User story: Create a landing page for a luxury holiday business that collects
+                visitor's contact information.</p>
+              <a href="https://github.com/Vickysug/golden-island" target="_blank" class="btn btn-primary">Go to GitHub
+                repository</a>
               <br></br>
-              <a href="#" class="btn btn-primary">Go to deployed page</a>
+              <a href="https://vickysug.github.io/golden-island/" target="_blank" class="btn btn-primary">Go to deployed
+                page</a>
             </div>
           </div>
         </div>
+      </div>
 
         <!-- </div> -->
 
