--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <p class="fs-3">Aspiring front-end developer with front-end developer
               bootcamp training, see <a href="#about-me">About me</a> for further details.
               Browse my projects, including GitHub repositories. You may also view the
-              repository for this page
+              repository for this page.
               <a href="https://github.com/Vickysug/Bootstrap-Portfolio" target="_blank">here</a> .
             </p>
           </div>
