added more projects

--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
         <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
           <!--card1-->
           <div class="card">
-            <img src="Images/spotted.jpg" class="card-img-top" alt="...">
+            <div id="spotted"></div>
+            <img src="Images/spotted.jpg" class="card-img-top" alt="Screenshot of Spoted app">
             <div class="card-body">
               <h5 class="card-title">App using API's</h5>
               <p class="card-text"> A social media application tailored for local communities.</p>
@@ -111,16 +112,15 @@
         <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
           <!--card2-->
           <div class="card">
-            <div id="refactoring">
-            <img src="Images/horiseon.jpg" class="card-img-top card-img-special" alt="image of horiseon home page">
+            <div id="have-a-word">
+            <img src="Images/have-a-word.png" class="card-img-top card-img-special" alt="Screenshot of Have A Word App">
             <div class="card-body">
-              <h5 class="card-title">Refactoring</h5>
-              <p class="card-text">User story: A marketing agency wanting codebase refactoring to ensure it follows
-                accessibility standards so that site is optimized for search engines.</p>
-              <a href="https://github.com/Vickysug/horiseon" target="_blank" class="btn btn-primary">Go to GitHub
+              <h5 class="card-title">Have A Word</h5>
+              <p class="card-text"></p>A translation, dictionary and quiz app.</p>
+              <a href="https://github.com/Vickysug/have-a-word" target="_blank" class="btn btn-primary">Go to GitHub
                 repository</a>
               <br></br>
-              <a href="https://vickysug.github.io/horiseon/" target="_blank" class="btn btn-primary">Go to deployed
+              <a href="https://havaword.netlify.app/" target="_blank" class="btn btn-primary">Go to deployed
                 page</a>
             </div>
           </div>
@@ -130,16 +130,15 @@
         <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
           <!--card3-->
           <div class="card">
-            <div id="study-guide">
-            <img src="Images/books.jpg" class="card-img-top" alt="...">
+            <div id="arch-way">
+            <img src="Images/arch-way.png" class="card-img-top" alt="Screen shot of Arch-Way Project website.">
             <div class="card-body">
-              <h5 class="card-title">Study Guide</h5>
-              <p class="card-text">User story: Create a study guide to hold notes and information learned during
-                boocamp. Work in progress.</p>
-              <a href="https://github.com/Vickysug/prework-study-guide" target="_blank" class="btn btn-primary">Go to
+              <h5 class="card-title">ARCH-WAY PROJECT</h5>
+              <p class="card-text">A website I created for a local mental health charity.</p>
+              <a href="https://github.com/Vickysug/arch-way-project" target="_blank" class="btn btn-primary">Go to
                 GitHub repository</a>
               <br></br>
-              <a href="https://vickysug.github.io/prework-study-guide/" target="_blank" class="btn btn-primary">Go to
+              <a href="https://vickysug.github.io/arch-way-project/" target="_blank" class="btn btn-primary">Go to
                 deployed page</a>
             </div>
           </div>
@@ -150,16 +149,17 @@
         <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
           <!--card1-->
           <div class="card">
+            <div id="portfolio">
           <div id="responsive-portfolio">
-            <img src="Images/portfolio.jpg" class="card-img-top" alt="...">
+            <img src="Images/portfolio.jpg" class="card-img-top" alt="Screenshot of portfolio website">
             <div class="card-body">
               <h5 class="card-title">Responsive Portfolio</h5>
               <p class="card-text">User story: To build a responsive portfolio page using flexbox, media queries, and
                 CSS variables, which I can add to as the course progresses.</p>
-              <a href="https://github.com/Vickysug/Victoria-Sugden-Portfolio" target="_blank" class="btn btn-primary">Go
+              <a href="https://github.com/Vickysug" target="_blank" class="btn btn-primary">Go
                 to GitHub repository</a>
               <br></br>
-              <a href="https://vickysug.github.io/Victoria-Sugden-Portfolio/" target="_blank" class="btn btn-primary">Go
+              <a href="https://github.com/Vickysug" target="_blank" class="btn btn-primary">Go
                 to deployed page</a>
             </div>
           </div>
@@ -169,7 +169,8 @@
         <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
           <!--card2-->
           <div class="card">
-            <img src="Images/Elenaor clutch's2.resize.jpg" class="card-img-top" alt="...">
+            <div id="leather-bags">
+            <img src="Images/Elenaor clutch's2.resize.jpg" class="card-img-top" alt="screenshot of leather bags webpage">
             <div class="card-body">
               <h5 class="card-title">Business page</h5>
               <p class="card-text">User story: To create a single web page with links to social media and etsy. 
@@ -180,13 +181,15 @@
             </div>
           </div>
         </div>
+        </div>
+        </div>
         <!--column3-->
         <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
           <!--card3-->
           
           <div class="card">
             <div id="landing-page">
-            <img src="Images/beach.png" class="card-img-special" alt="...">
+            <img src="Images/beach.png" class="card-img-special" alt="screenshot of landing page">
             <div class="card-body">
               <h5 class="card-title">Landing Page</h5>
               <p class="card-text">User story: Create a landing page for a luxury holiday business that collects
@@ -200,6 +203,9 @@
           </div>
         </div>
       </div>
+    </div>
+  </div>
+</div>
 
         <!-- </div> -->
 
