changes to contact

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 
           <div class="text col-md-8 col">
             <div class="contact" id="contact"></div>
-            <h5>Contact</h5>
+            <h5>Let's chat . .</h5>
             <p>
               victoriasugden@yahoo.co.uk
             </p>
