added baby mika game

--- a/index.html
+++ b/index.html
@@ -149,15 +149,14 @@
             <div class="card">
               <div id="portfolio">
             <div id="responsive-portfolio">
-              <img src="Images/portfolio.jpg" class="card-img-top" alt="Screenshot of portfolio website">
+              <img src="Images/game.scrn.sht.png" class="card-img-top" alt="Screenshot of Baby Mika Game">
               <div class="card-body">
-                <h5 class="card-title">Responsive Portfolio</h5>
-                <p class="card-text">User story: To build a responsive portfolio page using flexbox, media queries, and
-                  CSS variables, which I can add to as the course progresses.</p>
-                <a href="https://github.com/Vickysug" target="_blank" class="btn btn-primary">Go
+                <h5 class="card-title">Short Game</h5>
+                <p class="card-text">User story: Aimed at ages 18-25, create a 1-2 minute game that offers a quick look into the early life of a celebrity refugee.</p>
+                <a href="https://github.com/Vickysug/baby-mikas-escape" target="_blank" class="btn btn-primary">Go
                   to GitHub repository</a>
                 <br></br>
-                <a href="https://github.com/Vickysug" target="_blank" class="btn btn-primary">Go
+                <a href="https://vickysug.github.io/baby-mikas-escape/" target="_blank" class="btn btn-primary">Go
                   to deployed page</a>
               </div>
             </div>
