changed dropdown nav

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <li><a class="dropdown-item" href="#spotted">Spotted App</a></li>
               <li><a class="dropdown-item" href="#have-a-word">Have A Word App</a></li>
               <li><a class="dropdown-item" href="#arch-way">ARCH-WAY PROJECT</a></li>
-              <li><a class="dropdown-item" href="#responsive-portfolio">Portfolio</a></li>
+              <li><a class="dropdown-item" href="#short-game">Short Game</a></li>
               <li><a class="dropdown-item" href="#landing-page">Landing Page</a></li>
               <li><a class="dropdown-item" href="#leather-bags">Leather Bags</a></li>
               <li>
@@ -147,8 +147,8 @@
           <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
             <!--card1-->
             <div class="card">
-              <div id="portfolio">
-            <div id="responsive-portfolio">
+              <div id="short-game">
+            <div id="short-game">
               <img src="Images/game.scrn.sht.png" class="card-img-top" alt="Screenshot of Baby Mika Game">
               <div class="card-body">
                 <h5 class="card-title">Short Game</h5>
